name:                haddock-relative-link
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/deech/haddock-relative-link#readme
license:             BSD3
license-file:        LICENSE
author:              Aditya Siram
maintainer:          aditya.siram@gmail.com
copyright:           MIT
category:            Web
build-type:          Custom
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable haddock-relative-link-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haddock-relative-link
  default-language:    Haskell2010

test-suite haddock-relative-link-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haddock-relative-link
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/deech/haddock-relative-link
